tooling/nargo_cli/tests/snapshots/execution_success/slice_coercion/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct Hasher {
    fields: [Field],
}

impl Hasher {
    pub fn new() -> Self {
        Self { fields: [].as_slice() }
    }

    pub fn add(&mut self, field: Field) {
        self.fields = self.fields.push_back(field);
    }
}

fn main(expected: pub Field, first: Field) {
    let mut hasher: Hasher = Hasher::new();
    hasher.add(first);
    assert(hasher.fields[0] == expected);
    regression_4967();
}

fn regression_4967() {
    let var1: [(i32, u8)] = [(1, 2)].as_slice();
    assert(var1.len() == 1);
    println(var1);
}
