tooling/nargo_cli/tests/snapshots/execution_success/slice_coercion/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "expected",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      },
      {
        "name": "first",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2bTW/aQBCG1zEOGEJCQr6Thr9gbIjpLYf2R1TqxYFG6qWqqt56yU9vre5slmGgcvOOcIRXimy8zrPvzs7ODB8OzN8W2L+ytexxz6w2uufBHpPXtTGQlWjqDJR0OqH+ApgNhv9sT2KzvEjl5RA44VjQh+LPksl9LMwPqD+LPaYCPyV+S4eftC3nw/My37Bx+2bVd+h/qM/fyB9tX8f20/mhPY8ZT2PdfU1ouw0F/TRWz871yrOHb9dI0BawPrp3yOyl5QcnHtewsTTX6k9LJf8xTI/fQuEeuq+0+8ie94X7qPXMS2xrPePnlc+ShMYLLT8yq9r98SN2/5193WX6aW0e/lPnU16Mn7LiqZgWi8VkXvC1L9s6X1b2hbG0b4FJUTueOv6+Dj8je0TeWoXCnGj8vlmOJ9QvHY1Zjv2GjdU1qrluvGluvn7yjQG7n9tgHSuqyIqFPo01bW2Ytz9+f4NWaR4B0CbUd2TkOODbSyv3cnu1vHlIOXXPrPqGb+uIXZvZYxn3PgXLPL5X+DVuu1DQI8VQXIzLH6UYh+OnqbQfcPz7RymGAvnvid/W4X8hfkeHPyF+rMLPCuJ3dfzTvWfq6dhnTvwDHb7T39fhT4l/qMJPnX2OdNbX+edAh+/277EOPyH+iQ7fre9QhT918fNUxz9z4p/p2Mfll3MdvtN/oWOfGfEvVfiZiz9XOnxn/2sd+y+If6Oj39n/VoU/XVD9/c68NF7b3XnXcbVvPg/YeMbI79n8zw58reBa3L1nu2N6uH2oLibbjQStA6GP18gjYZyRMI7EagFZEZC1D2S1gawOkIW0fVxTXV0gqwdkIf3rAMjqA1nIdTysqa4jIGsAZB0DWXX1CWTMaXJak9PeSk5DxpwTIAsZc5C5tslp2/OvXchpyBqzrvFrCGQ1ubYaq8m129OF3NtInzgFspD+hYyrSF+t635E5lqk7ZH+hdR1BmTtQi13DmQh9xBybyP30AWQVdf8eAlkXQFZ10AWcj8GQFZTr24vTuxCvYr8PAe5jk0dXY3V1NHVWE0dXY3V1NHVWE0dXY21C3X0DZCFrH1va6qLWNJv7cv2YI/J69pY+XmisfRbe6B+9ywF7W3f1qFga3ruw8+nHWbrWMcWKWndF7T6sYnvO2lu0m/TDjw7f//x9dtPw5r/kIzvVPTaf6KdB9/2GlG/GCNaM5Z/Htox9oTr/hiSxkAYs2zll6DoBw2LPJvN08k8f5xmRXb/zwcNfwPV6F/xJkAAAA==",
  "debug_symbols": "ndfRSiNLFIXhd+nrXPReu7qr2lcZRKK2QyBEySQHDpJ3n+6sPzN6IQzeuCYT61ehPui8d8/z4/nnw+7w8vqru/vx3j0ed/v97ufD/vVpe9q9Hpb/fe/69UsM3V1suhg91dM8U3enTafeEx558jq5vMpl0lM8g2f0VE/zTNcpvSc8rhRXiivFleJKcaW4UlwZlkpZJjzypKd4Bs/oqZ6lUpeZrjP2nvDIk57iGTyjp3pcGV2prlRXqivVlepKdaW6Ul2prlRXmivNleZKc6W50lxprjRXmivNlcmVyZXJlcmVyZXJlcmVyZXJlcmV6Hs2WLHJFnZgR7ayjaUX9IJe0At6QS/oBb2gF/SCnuiJnuiJnuiJnuiJnuiJXtJLekkv6SW9pJf0kl7SS3qFXqFX6BV6hV6hV+gVeoVeoTfQG+gN9AZ6A72B3kBvoMe1D+59cPGDmx9c/eDuB5c/uP3B9Q/ufwAgEBAQCAwECAIFAYPAQQAhkBBQCCwEGAINAYfAQwAiEBGQCEwEKAIVAYvARQAjkBHQCGwEOAIdAY/Ah/AhfAgfwofwIXwIH8KH8CF8CB/Ch/AhfAgfwofwIXwIH8KH8CF8CB/Ch/AhfAgfwofwIXwIH8KH8CF8CB/Ch/AhfAgfwofwIXwIH8KH8CF8CB/Ch/AhfAgfwofwIXwIH8KH8CF8CB/Ch/AhfAgfwofwIXwIH8KH8CF8CB/Ch/AhfAgfwofwIXwIH8KH8CF8CB/Ch/AhfAgfwofwIXwIH8KH8CF8CB/Ch/AhfAgfwkfiI/GR+Eh8JD4SH4mPxEfiI/GR+Eh8JD4SH4mPxEfiI/GR+Eh8JD4SH4mPxEfiI/GR+Eh8JD4SH4mPxEfiI/GR+MjVR1t3ZCvb2Mm7+rhusGKXXrtcNt3tce7hdJzn9Wnuw/Pd8tT3tj3Oh1N3dzjv95vuv+3+fP2mX2/bw3VP2+Pybr/p5sPzskvwZbef139dNn9P918fXf4iDueoP8eHfz9fbz88W/3G+VKS82WI75wfb79/Gdt3zreR80Nfvjo/fH2+TcH5SfnnvPTp/Pj1+Vpvv3+t03fOl3o73/pP5++XV9un3fHTJ4bLWjruto/7mZcv58PTh3dP/7/d3rl94ng7vj7Nz+fjvJY+fOxYvv7QsMn+fn2gW15kWV6Ven9Zf/hv",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_add(y)\")]\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_sub(y)\")]\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_mul(y)\")]\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::ops::arith::WrappingMul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test]\n    fn test_wrapping_mul() {\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, zero.wrapping_mul(one));\n\n        // 0*1==0\n        assert_eq(zero, one.wrapping_mul(zero));\n\n        // 1*1==1\n        assert_eq(one, one.wrapping_mul(one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, zero.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, two_pow_64.wrapping_mul(zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, two_pow_64.wrapping_mul(one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, one.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, two_pow_64.wrapping_mul(two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, u128_max.wrapping_mul(u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "struct Hasher {\n    fields: [Field],\n}\n\nimpl Hasher {\n    pub fn new() -> Self {\n        Self { fields: [] }\n    }\n\n    pub fn add(&mut self, field: Field) {\n        self.fields = self.fields.push_back(field);\n    }\n}\n\nfn main(expected: pub Field, first: Field) {\n    let mut hasher = Hasher::new();\n    hasher.add(first);\n    assert(hasher.fields[0] == expected);\n\n    regression_4967();\n}\n\nfn regression_4967() {\n    let var1: [(i32, u8)] = [(1, 2)];\n    assert(var1.len() == 1);\n    std::println(var1);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
